Incorrect fresnel and normals for hair strands on EEVEE #63435

Closed
opened 2019-04-09 20:33:11 +02:00 by Jean Da Costa · 6 comments

System Information
Operating system: Windows 7
Graphics card: GTX 1050

Blender Version
2a79e34631

Short description of error
Normals and fresnel nodes are being incorrectly calculated for hair particles in EEVEE, not taking in account the local curvature of the hair strand.

.blend
incorrect fresnel for hair particles.blend

**System Information** Operating system: Windows 7 Graphics card: GTX 1050 **Blender Version** 2a79e3463130 **Short description of error** Normals and fresnel nodes are being incorrectly calculated for hair particles in EEVEE, not taking in account the local curvature of the hair strand. .blend [incorrect fresnel for hair particles.blend](https://archive.blender.org/developer/F6923345/incorrect_fresnel_for_hair_particles.blend)
Author

Added subscriber: @jeacom

Added subscriber: @jeacom

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-04-09 22:39:36 +02:00

@fclem known limitation or not? I can't seem to find anything about it in the docs

@fclem known limitation or not? I can't seem to find anything about it in the docs
Author

As far as I know its just a matter of using the same normals that are currently used to compute the diffuse shading, It seems like the hair strand vector is being used instead.

As far as I know its just a matter of using the same normals that are currently used to compute the diffuse shading, It seems like the hair strand vector is being used instead.

This issue was referenced by 7f366c048a

This issue was referenced by 7f366c048a538adc1a6972492e45df2c217f68ff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63435
No description provided.