Fix T63435 Incorrect fresnel and normals for hair strands on EEVEE